--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -24,7 +24,7 @@
 					        <div class="button button-primary button-rounded button-small ddddAnniu" id="dd_selectBtn" style="margin-left:5px;">查找</div>
 				        </div>
 					</div>
-					<div class="row" style="margin-top:14px;margin-left:-10px;">
+					<div class="row" style="margin-top:5px;margin-left:-10px;">
 			            <div class="col-md-1" style="width:120px;">
 					        <div class="button button-primary button-rounded button-small ddddAnniu" id="dd_dowBtn">下载</div>
 				        </div>
@@ -62,7 +62,7 @@
 					           </thead>
 							</table>
 						</div>
-				        <div class="table-body" style="width:100%;">
+				        <div class="table-body" style="width:100%;" id="table-body1">
 				           <table class="table table-bordered text-center table-hover" id="dd_table">
 				               <tbody></tbody>
 				           </table>
@@ -82,7 +82,7 @@
 					           </thead>
 							</table>
 						</div>
-				        <div class="table-body" style="width:100%;">
+				        <div class="table-body" style="width:100%;" id="table-body2">
 				           <table class="table table-bordered text-center table-hover" id="mz_table">
 				               <tbody></tbody>
 				           </table>
@@ -93,9 +93,9 @@
 							<table class="table table-bordered" style="width:100%;">
 					           <thead>
 					               <tr>
+					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">载具号</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">工单号</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">模组号</th>
-					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">载具号</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">物料编码</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">物料描述</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">需求数量</th>
@@ -109,7 +109,7 @@
 					           </thead>
 							</table>
 						</div>
-				        <div class="table-body" style="width:100%;">
+				        <div class="table-body" style="width:100%;" id="table-body3">
 				           <table class="table table-bordered text-center table-hover" id="pf_table">
 				               <tbody></tbody>
 				           </table>
