--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -288,6 +288,7 @@
 					                  <th class="text-center" style="width:40px;" bgcolor="#EFEFEF">回大库</th>
 					                  <th class="text-center" style="width:55px;" bgcolor="#EFEFEF">开始时间</th>
 					                  <th class="text-center" style="width:55px;" bgcolor="#EFEFEF">结束时间</th>
+					                  <th class="text-center" style="width:20px;" bgcolor="#EFEFEF"></th>
 					               </tr>
 					           </thead>
 							</table>
