--- a/smtcl_erp/WebRoot/html/plc.html
+++ b/smtcl_erp/WebRoot/html/plc.html
@@ -1286,10 +1286,10 @@
 			        <div class="button button-primary button-rounded button-small anNiuSelect" style="margin-left:5px;">查找</div>
 		        </div>
 		        <div class="col-md-1" style="width:125px;">
-			        <div class="button button-primary button-rounded button-small anNiuSave" style="margin-left:5px;">保存</div>
+			        <div class="button button-primary button-rounded button-small anNiuSave" id="anNiuSave" style="margin-left:5px;">保存</div>
 		        </div>
 		        <div class="col-md-1" style="width:125px;">
-			        <div class="button button-primary button-rounded button-small anNiuDelete" style="width:140px;margin-left:5px;">清除PLC指令</div>
+			        <div class="button button-primary button-rounded button-small anNiuDelete" id="anNiuDelete" style="width:140px;margin-left:5px;">清除PLC指令</div>
 		        </div>
 			</div>
 			<!-- 工单 -->
