--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -766,6 +766,11 @@
 					               			<td style="width:30%;" class="anniuColor">启动库指令</td>
 					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX44">false</td>
 					               		</tr>
+					               		<tr style="height:22px;">
+					               			<td style="width:3%;font-size:12px;">45</td>
+					               			<td style="width:30%;" class="anniuColor">急停</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX45">false</td>
+					               		</tr>
 					               </tbody>
 					           </table>
 					        </div>
