库房托盘可编辑

--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -39,8 +39,8 @@
 						                <span><span style="color:red;">*</span>托盘编号：</span>
 						            </div>
 						            <div class="col-md-4">
-						            	<div class="input-group">
-						               		<input id="tp_code" type="text" style="z-index:0;" readonly="readonly" class="form-control"/>
+						            	<div class="input-group"> <!-- readonly="readonly" -->
+						               		<input id="tp_code" type="text" style="z-index:0;" class="form-control"/>
 							                <span class="input-group-btn">
 										        <button class="btn btn-default" id="tp_code_click" type="button">读取</button>
 									   		</span>
