bug修复，PLC无法清除指令、订单维护界面新加权限

--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -154,42 +154,40 @@
 							 </div>
 			            </div>
 			            <div class="col-md-2 text-right" style="padding: 5px 0 0 0;">
-			                <span>传送否:</span>
-			            </div>
-		           		<div class="col-md-3">
-			                <input id="chuansong_id" type="text" readonly="readonly" value="否" class="form-control"/>
-			            </div>
-			        </div>       				 
-		            <div class="row margin-top-10">
-			        	<div class="col-md-1"></div>
-			            <div class="col-md-2 text-right" style="padding: 5px 0 0 0;">
 			                <span>装配区:</span>
 			            </div>					           
 			           <div class="col-md-3">
 			                <div class="cus-select" id="assemble_area">
                                 <div class="cus-select-btn"></div>
-                                <input id="assemble_area_id" type="text" placeholder="--请选择--" readonly/>
-                                <ul>  
-                                    <li></li>                        
+                                <input id="assemble_area_id" type="text" value="1" placeholder="--请选择--" readonly/>
+                                <ul>
                                 	<li>1</li>
                                 	<li>2</li>	
                                 </ul>
                             </div>
-			            </div>	   			            					           
+			            </div>	
+			        </div>       				 
+		            <div class="row margin-top-10">
+			        	<div class="col-md-1"></div>
 			            <div class="col-md-2 text-right" style="padding: 5px 0 0 0;">
 			                <span>释放否:</span>
 			            </div>
 			            <div class="col-md-3">
 			                <div class="cus-select" id="shifang">
                                 <div class="cus-select-btn"></div>
-                                <input id="shifang_id" type="text" placeholder="--请选择--" readonly/>
+                                <input id="shifang_id" type="text" value="否" placeholder="--请选择--" readonly/>
                                 <ul>
-                                	<li></li>		                                	             
                                 	<li>是</li>
-                                	<li>否</li>	                                	
+                                	<li>否</li>
                                 </ul>
                             </div>
-			            </div>				            
+			            </div>
+			            <div class="col-md-2 text-right" style="padding: 5px 0 0 0;">
+			                <span>传送否:</span>
+			            </div>
+		           		<div class="col-md-3">
+			                <input id="chuansong_id" type="text" readonly="readonly" value="否" class="form-control"/>
+			            </div>		            
 		        	</div>
 		        </div>
 		    </form>
