--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -771,6 +771,11 @@
 					               			<td style="width:30%;" class="anniuColor">急停</td>
 					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX45">false</td>
 					               		</tr>
+					               		<tr style="height:22px;">
+					               			<td style="width:3%;font-size:12px;">46</td>
+					               			<td style="width:30%;" class="dingdanColor">订单维护</td>
+					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX46">false</td>
+					               		</tr>
 					               </tbody>
 					           </table>
 					        </div>
