--- a/smtcl_erp/WebRoot/html/plc.html
+++ b/smtcl_erp/WebRoot/html/plc.html
@@ -1273,23 +1273,26 @@
 		<!-- 故障恢复 -->
 		<div id="dingDanUpdate" class="row showWindow" style="padding:0;margin:0;display:none;">
 			<div class="row" style="margin-top:-45px;margin-left:-10px;">
-	            <div class="col-md-1" style="width:220px;">
+	            <div class="col-md-1" style="width:200px;">
 					<input id="GdId" type="text" placeholder="--请输入工单号 --" class="form-control"/>
 				</div>
-	            <div class="col-md-1" style="width:215px;">
+	            <div class="col-md-1" style="width:200px;">
 					<input id="Gdfenjieriqi" type="text" placeholder="--请输入分解日期 --" class="form-control"/>
 				</div>
-	            <div class="col-md-2" style="width:220px;">
+	            <div class="col-md-2" style="width:200px;">
 					<input id="PackeCode" type="text" placeholder="--请输入pack编码 --" class="form-control"/>
 				</div>
-	            <div class="col-md-1" style="width:125px;">
+	            <div class="col-md-1" style="width:120px;">
 			        <div class="button button-primary button-rounded button-small anNiuSelect" style="margin-left:5px;">查找</div>
 		        </div>
-		        <div class="col-md-1" style="width:125px;">
+		        <div class="col-md-1" style="width:120px;">
 			        <div class="button button-primary button-rounded button-small anNiuSave" id="anNiuSave" style="margin-left:5px;">保存</div>
 		        </div>
-		        <div class="col-md-1" style="width:125px;">
+		        <div class="col-md-1" style="width:168px;">
 			        <div class="button button-primary button-rounded button-small anNiuDelete" id="anNiuDelete" style="width:140px;margin-left:5px;">清除PLC指令</div>
+		        </div>
+		        <div class="col-md-1" style="width:125px;">
+			        <div class="button button-primary button-rounded button-small anNiuYJHY" id="anNiuYJHY" style="width:110px;margin-left:5px;">一键还原</div>
 		        </div>
 			</div>
 			<!-- 工单 -->
